--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,12 @@
 <%- include ('partials/header.ejs') %>
 <%- include ('partials/main_nav.ejs') %>
    
+<!--Comp229-020
+Assignment 1
+Date: Sep 28, 2023
+Student name: Wing Sau Chun
+Student ID: 301299037
+-->
 
 <main class="container">
   <link rel="stylesheet" href="/Content/style.css"/>
