--- a/app/views/partials/bottom_nav.ejs
+++ b/app/views/partials/bottom_nav.ejs
@@ -1,6 +1,7 @@
  <footer>
       <nav class="navbar fixed-bottom navbar-dark bg-dark">
-   
+        <small>Copyright &copy; 2023 Wing Sau Chun Comp 229-020<br></small>
+        <a href="mailto:wchun6@my.centennialcollege.ca">Email</a>
     <h6 class="display-6 navbar-text">&copy;2023 All rights reserved</h6>
     </div>
     </nav>
