--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -1,13 +1,25 @@
 <%- include ('partials/header.ejs') %>
 <%- include ('partials/main_nav.ejs') %>
-   
+<!--Comp229-020
+Assignment 1
+Date: Sep 28, 2023
+Student name: Wing Sau Chun
+Student ID: 301299037
+--> 
 
 <main class="container">
   <link rel="stylesheet" href="/Content/style.css"/>
   <div class="jumbotron">
     <h1 class="display-4">Welcome to <%= title %> page</h1>
-    <p>Contact Us</p>
+   
+    <div class="contact-info">
+      <h2>My Contact Information</h2>
+      <p><strong>Email:</strong> ivychun@gmail.com</p>
+
+    </div>
+
     <div class="form-container">
+    <p>Contact Us</p>
     <form method="post">
       First Name: <input type="text" name="fname" id="fname"><br><br>
       Last Name: <input type="text" name="lname" id="lname"><br><br>
@@ -16,8 +28,12 @@
 
   <label for="comments">Comments:</label><br>
   <textarea name="comments" id="comments" rows="4" cols="40"></textarea><br><br>
-  <input type="submit" value="Contact"> <input type="reset">
+  <input type="submit" value="Submit"> <input type="reset">
     </form>
+     <!-- Contact Information Panel -->
+
+
+
   </div>
     </div>
     </main>
